--- a/google-analytics-lab/app/pages/other.html
+++ b/google-analytics-lab/app/pages/other.html
@@ -16,26 +16,38 @@ limitations under the License.
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-    <meta charset="utf-8">
-    <title>Other page</title>
+  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+  <meta charset="utf-8">
+  <title>Other page</title>
 
-  </head>
+</head>
 
-  <body>
+<body>
 
-    <h1>Other</h1>
+  <h1>Other</h1>
 
-    <p>This is another page</p>
+  <p>This is another page</p>
 
-    <br><br>
+  <br>
+  <br>
 
-    <a href="../index.html">Back</a>
+  <a href="../index.html">Back</a>
 
-    <!-- TODO 3: Add tracking snippet -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111867960-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
 
-  </body>
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-111867960-1');
+  </script>
+
+</body>
 
 </html>
