--- a/google-analytics-lab/app/index.html
+++ b/google-analytics-lab/app/index.html
@@ -15,6 +15,7 @@ limitations under the License.
 -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- Set the viewport -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,23 +35,40 @@ limitations under the License.
 
   <a href="pages/other.html" id="other">Other page</a>
 
-  <br><br>
+  <br>
+  <br>
 
   <button id="purchase">BUY NOW!!!</button>
 
-  <br><br>
+  <br>
+  <br>
 
-  <button id="subscribe">subscribe</button><button id="unsubscribe">unsubscribe</button>
+  <button id="subscribe">subscribe</button>
+  <button id="unsubscribe">unsubscribe</button>
 
-  <br><br>
+  <br>
+  <br>
 
   <a href="https://www.google.com/" id="external">Special offers</a>
 
-  <br><br>
+  <br>
+  <br>
 
-  <!-- TODO 3: Add tracking snippet -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-111867960-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-111867960-1');
+  </script>
 
   <script src="js/main.js"></script>
 
 </body>
+
 </html>
